# rag_test

./: .env.template  .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: config.py  convert_docs_to_md.py  create_index.py
src/chunkers/: context_chunk.py  markdown_chunk.py  sentence_chunk.py  sliding_window_chunk.py  text_chunker.py
src/datatypes/: chunk_model.py  embedded_chunk_model.py  retrieval_model.py
src/embedders/: embedding_model.py  sentence_transformer_embeddings.py
src/interface/: app.py
src/llm/: llm.py
src/prompts/: rag_prompt.jinja
src/rag/: rag.py
src/vectordatabase/: faiss_store.py
test/: test_contextchunk.py  test_embeddedchunk.py  test_faissstore.py  test_llm.py  test_markdownchunk.py  test_rag.py  test_sentencechunk.py  test_sentenceembedding.py  test_slidingwindowchunk.py
